Fixed text wrapping for small sceen width

--- a/src/styles/components/benefits.css
+++ b/src/styles/components/benefits.css
@@ -48,7 +48,6 @@
 }
 
 .benefits__item-content {
-  width: 428px;
 }
 
 .benefits__item-title {
