--- a/src/styles/components/footer.css
+++ b/src/styles/components/footer.css
@@ -51,16 +51,12 @@
   flex-direction: column;
 }
 
-.footer__links-row:first-child {
+.footer__links-row {
   display: flex;
-  gap: 22px;
+  gap: 0;
   justify-content: center;
-}
-
-.footer__links-row:last-child {
-  display: flex;
-  gap: 22px;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer__links {
@@ -116,6 +112,14 @@
   padding-bottom: 17px;
 }
 
+@media (--sm-viewport) {
+  .footer__links-row {
+    align-items: baseline;
+    flex-direction: row;
+    gap: 22px;
+  }
+}
+
 @media (--md-viewport) {
   .footer__title {
     text-align: left;
@@ -142,11 +146,7 @@
     gap: 32px;
   }
 
-  .links-row:first-child {
-    justify-content: flex-end;
-  }
-
-  .links-row:last-child {
+  .links-row {
     justify-content: flex-end;
   }
 }
