--- a/src/styles/components/reviews.css
+++ b/src/styles/components/reviews.css
@@ -12,6 +12,7 @@
   gap: 30px;
   max-width: 920px;
   place-items: center;
+  flex-direction: column;
 }
 
 .reviews__container-buttons-base {
@@ -47,6 +48,7 @@
   color: var(--color-text-primary);
   padding-bottom: 66px;
   font-weight: 400;
+  text-align: center;
 }
 
 .reviews__author {
@@ -86,6 +88,11 @@
 
   .reviews__text {
     font-size: 32px;
+    text-align: left;
+  }
+
+  .reviews__card {
+    flex-direction: row;
   }
 }
 
